dynamic services parameters enabled

--- a/app/views/css/main.css
+++ b/app/views/css/main.css
@@ -1702,7 +1702,7 @@ ul.social_icons li  a i{
 }
 
 .pricing-area ul {
-  background:#efefef;
+  background:#ffffff;
   padding: 0;
   margin: 0;
 }
