--- a/app/views/services.html
+++ b/app/views/services.html
@@ -114,9 +114,21 @@
                             </li>
                             <li >This service calculates the differences between two specified variables and displays the lat-lon maps of the two variables and their differences.<br>
                                 <br><br></li>
-                            <li>Scenario : 1</li>
-                            <li>Version : 2</li>
-                            <li>Root Service : 3</li>
+                            <form>
+                                <li>
+                                    <input type="text" class="form-control  col-md-offset-3" required="required"  style="text-align: center; width:50%" value="Scenario : 1">
+                                </li>
+                                <li>
+                                    <input type="text" class="form-control  col-md-offset-3" required="required" style="text-align: center; width:50%" value="Version : 2">
+                                </li>
+                                <li>
+                                    <input type="text" class="form-control  col-md-offset-3" required="required"  style="text-align: center; width:50%" value="Root_Service : 3">
+                                </li>
+                                <li class="form-group" style= "text-align: center">
+                                    <button type="submit" name="submit" class="btn btn-info btn-group-sm" required="required">Edit</button>
+                                    <button type="reset" name="reset" class="btn btn-warning btn-group-sm" required="required">Reset</button>
+                                </li>
+                            </form>
                             <li class="plan-action">
                                 <a href="http://einstein.sv.cmu.edu:9003/cmac/web/diffPlot2Vars.html" class="btn btn-primary" target="_blank">LinkTo</a>
                             </li>
@@ -131,9 +143,21 @@
                                 <br>
                             </li>
                             <li>This service generates a graph of a 2-dimensional variable's zonal mean with time averaing. Select a data source (model or observation), a variable name, and a time range below.<br></li>
-                            <li>Scenario : 1</li>
-                            <li>Version : 2</li>
-                            <li>Root Service : 3</li>
+                            <form>
+                                <li>
+                                    <input type="text" class="form-control  col-md-offset-3" required="required"  style="text-align: center; width:50%" value="Scenario : 1">
+                                </li>
+                                <li>
+                                    <input type="text" class="form-control  col-md-offset-3" required="required" style="text-align: center; width:50%" value="Version : 2">
+                                </li>
+                                <li>
+                                    <input type="text" class="form-control  col-md-offset-3" required="required"  style="text-align: center; width:50%" value="Root_Service : 3">
+                                </li>
+                                <li class="form-group" style= "text-align: center">
+                                    <button type="submit" name="submit" class="btn btn-info btn-group-sm" required="required">Edit</button>
+                                    <button type="reset" name="reset" class="btn btn-warning btn-group-sm" required="required">Reset</button>
+                                </li>
+                            </form>
                             <li class="plan-action">
                                 <a href="http://einstein.sv.cmu.edu:9003/cmac/web/twoDimZonalMean.html" class="btn btn-primary" target="_blank">LinkTo</a>
                             </li>
@@ -148,9 +172,21 @@
                                 <br>
                             </li>
                             <li>This service generates a map of a 2-dimensional variable with time averaging and spatial subsetting. Select a data source (model or observation), a variable name, a time range, and a spatial range (lat-lon box) below.</li>
-                            <li>Scenario : 1</li>
-                            <li>Version : 2</li>
-                            <li>Root Service : 3</li>
+                            <form>
+                                <li>
+                                    <input type="text" class="form-control  col-md-offset-3" required="required"  style="text-align: center; width:50%" value="Scenario : 1">
+                                </li>
+                                <li>
+                                    <input type="text" class="form-control  col-md-offset-3" required="required" style="text-align: center; width:50%" value="Version : 2">
+                                </li>
+                                <li>
+                                    <input type="text" class="form-control  col-md-offset-3" required="required"  style="text-align: center; width:50%" value="Root_Service : 3">
+                                </li>
+                                <li class="form-group" style= "text-align: center">
+                                    <button type="submit" name="submit" class="btn btn-info btn-group-sm" required="required">Edit</button>
+                                    <button type="reset" name="reset" class="btn btn-warning btn-group-sm" required="required">Reset</button>
+                                </li>
+                            </form>
                             <li class="plan-action">
                                 <a href="http://einstein.sv.cmu.edu:9003/cmac/web/twoDimMap.html" class="btn btn-primary" target="_blank">LinkTo</a>
                             </li>
