--- a/app/views/index.html
+++ b/app/views/index.html
@@ -529,14 +529,8 @@
                 <h2>Our Partners</h2>
             </div>    
 
-            <div class="partners">
-                <ul>
-                    <li> <a href="#"><img class="img-responsive wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms" src="images/partners/partner1.png"></a></li>
-                    <li> <a href="#"><img class="img-responsive wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms" src="images/partners/partner2.png"></a></li>
-                    <li> <a href="#"><img class="img-responsive wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="900ms" src="images/partners/partner3.png"></a></li>
-                    <li> <a href="#"><img class="img-responsive wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="1200ms" src="images/partners/partner4.png"></a></li>
-                    <li> <a href="#"><img class="img-responsive wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="1500ms" src="images/partners/partner5.png"></a></li>
-                </ul>
+            <div class="partner row col-sm-12">
+                <div class="center col-sm-4 col-sm-offset-5"><a class="center" href="http://www.nasa.gov/" target="_blank"><img class="img-responsive wow fadeInDown center" data-wow-duration="1000ms" data-wow-delay="300ms" width="220px" height="180px" src="images/partners/partner1.png"></a></div>
             </div>        
         </div><!--/.container-->
     </section><!--/#partner-->
