--- a/app/views/about-us.html
+++ b/app/views/about-us.html
@@ -104,7 +104,7 @@
 				<p class="lead">We are services computing group!</p>
 			</div>
 			<div>
-				<a href="">
+				<a href="http://einstein.sv.cmu.edu:9021" target="_blank">
 					<img src="images/about_us1.jpg" class="img-responsive" alt=""> 
 				</a>
 			</div>
