--- a/app/views/index.html
+++ b/app/views/index.html
@@ -74,6 +74,7 @@
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Web Services <i class="fa fa-angle-down"></i></a>
                             <ul class="dropdown-menu">
                                 <li><a href="services.html">All Services</a></li>
+                                <li><a href="Catalog.html">Services Catalog</a></li>
                                 <li><a href="add-web.html">Add A Service</a></li>
                                 <li><a href="serviceLog.html">All service Log</a></li>
                                 <li><a href="searchServiceLog.html">Search Service Log</a></li>
