--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -72,7 +72,7 @@
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Web Services <i class="fa fa-angle-down"></i></a>
                             <ul class="dropdown-menu">
-                                <li><a href="services.html">All Services</a></li>
+                                <li><a href="services">All Services</a></li>
                                 <li><a href="add-web.html">Add A Service</a></li>
                             </ul>
                         </li>
