--- a/app/views/catalog.html
+++ b/app/views/catalog.html
@@ -5,31 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>JPL Workflow | About Us</title>
-	
-	<!-- core CSS -->
-    <!-- core CSS -->
-    <link href='@routes.Assets.at("stylesheets/bootstrap.min.css")' rel="stylesheet">
-    <link href='@routes.Assets.at("stylesheets/font-awesome.min.css")' rel="stylesheet">
-    <link href='@routes.Assets.at("stylesheets/animate.min.css")' rel="stylesheet">
-    <link href='@routes.Assets.at("stylesheets/prettyPhoto.css")' rel="stylesheet">
-    <link href='@routes.Assets.at("stylesheets/main.css")' rel="stylesheet">
-    <link href='@routes.Assets.at("stylesheets/responsive.css")' rel="stylesheet">
+    <title>Portfolio | Corlate</title>
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/font-awesome.min.css" rel="stylesheet">
+    <link href="css/prettyPhoto.css" rel="stylesheet">
+    <link href="css/animate.min.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
+    <link href="css/responsive.css" rel="stylesheet">
     <!--[if lt IE 9]>
     <script src="js/html5shiv.js"></script>
     <script src="js/respond.min.js"></script>
-    <![endif]-->
-    <link rel="shortcut icon" href='@routes.Assets.at("images/ico/favicon.png")'>
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href='@routes.Assets.at("images/ico/apple-touch-icon-144-precomposed.png")'>
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href='@routes.Assets.at("images/ico/apple-touch-icon-114-precomposed.png")'>
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href='@routes.Assets.at("images/ico/apple-touch-icon-72-precomposed.png")'>
-    <link rel="apple-touch-icon-precomposed" href='@routes.Assets.at("images/ico/apple-touch-icon-57-precomposed.png")'>
+    <![endif]-->       
+    <link rel="shortcut icon" href="images/ico/favicon.ico">
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/ico/apple-touch-icon-144-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/ico/apple-touch-icon-114-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/ico/apple-touch-icon-72-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" href="images/ico/apple-touch-icon-57-precomposed.png">
 </head><!--/head-->
-
 <body>
 
     <header id="header">
-		<!--<div class="top-bar">
+        <!-- <div class="top-bar">
             <div class="container">
                 <div class="row">
                     <div class="col-sm-6 col-xs-4">
@@ -67,49 +63,229 @@
                     </button>
                     <a class="navbar-brand" href="index.html"><img src="images/logo.png" height="60px" width="300px" alt="logo"></a>
                 </div>
-				
+                
                 <div class="collapse navbar-collapse navbar-right">
                     <ul class="nav navbar-nav">
-                        <li><a href="index.html">Home</a></li>
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Web Services <i class="fa fa-angle-down"></i></a>
-                            <ul class="dropdown-menu">
-                                <li><a href="services.html">All Services</a></li>
-                                <li><a href="add-web.html">Add A Service</a></li>
-                                <li><a href="serviceLog.html">All service Log</a></li>
-                                <li><a href="searchServiceLog.html">Search Service Log</a></li>
-                            </ul>
-                        </li>
+                        <li class="active"><a href="index.html">Home</a></li>
+                        <li><a href="services.html">Services</a></li>
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Account Management <i class="fa fa-angle-down"></i></a>
                             <ul class="dropdown-menu">
-                                <li><a href="updateUser.html">Update User Details</a></li>
-                                <li><a href="deleteUser.html">Delete User</a></li>
+                                <li><a href="blog-item.html">Update User Details</a></li>
+                                <li><a href="pricing.html">Delete User</a></li>
+                                <li><a href="404.html">Account Summary</a></li>
+                                <li><a href="shortcodes.html">All service Log</a></li>
+                                <li><a href="portfolio.html">Search Service Log</a></li>
                             </ul>
                         </li>
-                        <li class="active"><a href="about-us.html">About Us</a></li> 
+                        <li><a href="about-us.html">About Us</a></li> 
                         <li><a href="contact-us.html">Contact</a></li>
                         <li><a href="log-in.html">Log In</a></li>
                     </ul>
                 </div>
             </div><!--/.container-->
         </nav><!--/nav-->
-	</header><!--/header-->
-
-    <section id="about-us">
+        
+    </header><!--/header-->
+    <section id="portfolio">
         <div class="container">
-			<div class="center wow fadeInDown">
-				<h2>About Us</h2>
-				<p class="lead">We are services computing group!</p>
-			</div>
-			<div>
-				<a href="http://einstein.sv.cmu.edu:9021" target="_blank">
-					<img src="images/about_us1.jpg" class="img-responsive" alt=""> 
-				</a>
-			</div>
-		</div>
-	</section>
-	
+            <div class="center">
+               <h2>Service Catalog</h2>
+               <p class="lead">All services have been cataloged for explicitness. </p>
+            </div>
+        
+
+            <ul class="portfolio-filter text-center">
+                <li><a class="btn btn-default active" href="#" data-filter="*">All Works</a></li>
+                <li><a class="btn btn-default" href="#" data-filter=".bootstrap">Class 1</a></li>
+                <li><a class="btn btn-default" href="#" data-filter=".html">Class 2</a></li>
+                <li><a class="btn btn-default" href="#" data-filter=".wordpress">Class 3</a></li>
+            </ul><!--/#portfolio-filter-->
+
+
+
+
+            <div class="row">
+                <div class="portfolio-items">
+                    <div class="portfolio-item apps col-xs-12 col-sm-4 col-md-3">
+                        <div class="recent-work-wrap">
+                            <div class="pricing-area text-center">
+
+                                <div class="col-sm-12 plan price-one wow fadeInDown">
+                                    <ul>
+                                        <li class="heading-one" data-toggle="collapse" data-target="#ndemo1">
+                                            <span >Difference Plot of Two Time Averaged Variables</span>
+                                        </li>
+                                        <div id="ndemo1" class="collapse">
+                                            <li   >This service calculates the differences between two specified variables and displays the lat-lon maps of the two variables and their differences.<br>
+                                                <br><br></li>
+                                            <li>Scenario : 1</li>
+                                            <li>Version : 2</li>
+                                            <li>Root Service : 3</li>
+                                        </div>
+                                        <li class="plan-action">
+                                            <a href="http://einstein.sv.cmu.edu:9003/cmac/web/diffPlot2Vars.html" class="btn btn-primary" target="_blank">LinkTo</a>
+                                        </li>
+                                    </ul>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div><!--/.portfolio-item-->
+
+                    <div class="portfolio-item joomla bootstrap col-xs-12 col-sm-4 col-md-3">
+                        <div class="recent-work-wrap">
+                            <div class="pricing-area text-center">
+                                <div class="col-sm-12 plan price-two wow fadeInDown" style="text-align: center">
+                                    <ul>
+                                        <li class="heading-two" data-toggle="collapse" data-target="#ndemo2">
+                                            <span>2-D Variable Zonal Mean</span>
+                                            <br>
+                                            <br>
+                                        </li>
+                                        <div id="ndemo2" class="collapse">
+                                            <li>This service generates a graph of a 2-dimensional variable's zonal mean with time averaing. Select a data source (model or observation), a variable name, and a time range below.<br></li>
+                                            <li>Scenario : 1</li>
+                                            <li>Version : 2</li>
+                                            <li>Root Service : 3</li>
+                                        </div>
+                                        <li class="plan-action">
+                                            <a href="http://einstein.sv.cmu.edu:9003/cmac/web/twoDimZonalMean.html" class="btn btn-primary" target="_blank">LinkTo</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>          
+                    </div><!--/.portfolio-item-->
+
+                    <div class="portfolio-item bootstrap wordpress col-xs-12 col-sm-4 col-md-3">
+                        <div class="recent-work-wrap">
+                            <div class="pricing-area text-center">
+                                <div class="col-sm-12 plan price-three wow fadeInDown">
+                                    <ul>
+                                        <li class="heading-three" data-toggle="collapse" data-target="#ndemo3">
+                                            <span>2-D Variable Map</span>
+                                            <br>
+                                            <br>
+                                        </li>
+                                        <div id="ndemo3" class="collapse">
+                                            <li>This service generates a map of a 2-dimensional variable with time averaging and spatial subsetting. Select a data source (model or observation), a variable name, a time range, and a spatial range (lat-lon box) below.</li>
+                                            <li>Scenario : 1</li>
+                                            <li>Version : 2</li>
+                                            <li>Root Service : 3</li>
+                                        </div>
+                                        <li class="plan-action">
+                                            <a href="http://einstein.sv.cmu.edu:9003/cmac/web/twoDimMap.html" class="btn btn-primary" target="_blank">LinkTo</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>        
+                    </div><!--/.portfolio-item-->
+
+                    <div class="portfolio-item joomla wordpress apps col-xs-12 col-sm-4 col-md-3">
+                        <div class="recent-work-wrap">
+                            <div class="pricing-area text-center">
+                                <div class="col-sm-12 plan price-four wow fadeInDown">
+                                    <ul>
+                                        <li class="heading-four" data-toggle="collapse" data-target="#ndemo4">
+                                            <span>3-D Variable 2-D Slice</span>
+                                            <br>
+                                            <br>
+                                        </li>
+                                        <div id="ndemo4" class="collapse">
+                                            <li>This service generates a slice map of a 3-dimensional variable at a selected pressure level. Select a data source, a variable name, a time range, a spatial range, and a pressure level below.</li>
+                                            <li>Scenario : 1</li>
+                                            <li>Version : 2</li>
+                                            <li>Root Service : 3</li>
+                                        </div>
+                                        <li class="plan-action">
+                                            <a href="http://einstein.sv.cmu.edu:9003/cmac/web/twoDimSlice3D.html" class="btn btn-primary" target="_blank">LinkTo</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>           
+                    </div><!--/.portfolio-item-->
+
+                    <div class="portfolio-item joomla html bootstrap col-xs-12 col-sm-4 col-md-3">
+                        <div class="recent-work-wrap">
+                            <div class="pricing-area text-center">
+                                <div class="col-sm-12 plan price-five wow fadeInDown">
+                                    <ul>
+                                        <li class="heading-five"  data-toggle="collapse" data-target="#ndemo5">
+                                            <span>Scatter and Histogram Plot of Two Variables</span>
+
+                                        </li>
+                                        <div id="ndemo5" class="collapse">
+                                            <li>This service generates a scatter plot between two specified variables and the histograms of the two variables, and calculates the correlation of the two variables.<br><br></li>
+                                            <li>Scenario : 1</li>
+                                            <li>Version : 2</li>
+                                            <li>Root Service : 3</li>
+                                        </div>
+                                        <li class="plan-action">
+                                            <a href="http://einstein.sv.cmu.edu:9003/cmac/web/scatterPlot2Vars.html" class="btn btn-primary" target="_blank">LinkTo</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>      
+                    </div><!--/.portfolio-item-->
+
+                    <div class="portfolio-item wordpress html apps col-xs-12 col-sm-4 col-md-3">
+                        <div class="recent-work-wrap">
+                            <div class="pricing-area text-center">
+                                <div class="col-sm-12 plan price-six wow fadeInDown">
+                                    <ul>
+                                        <li class="heading-six" data-toggle="collapse" data-target="#ndemo6">
+                                            <span>Conditional Sampling</span>
+                                            <br>
+                                            <br>
+                                        </li>
+                                        <div id="ndemo6" class="collapse">
+                                            <li>This service sorts one variable by the values of another variable (environmental condition, e.g. SST) and displays the averaged value of the first variable as a function of the bin value of the second variable.</li>
+                                            <li>Scenario : 1</li>
+                                            <li>Version : 2</li>
+                                            <li>Root Service : 3</li>
+                                        </div>
+                                        <li class="plan-action">
+                                            <a href="http://www.cs.ucl.ac.uk/staff/w.langdon/bloat_csrp-97-29/node2.html" class="btn btn-primary" target="_blank">LinkTo</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>         
+                    </div><!--/.portfolio-item-->
+
+                    <div class="portfolio-item wordpress html col-xs-12 col-sm-4 col-md-3">
+                        <div class="recent-work-wrap">
+                            <div class="pricing-area text-center">
+                                <div class="col-sm-12  plan price-seven wow fadeInDown">
+                                    <ul>
+                                        <li class="heading-seven" data-toggle="collapse" data-target="#ndemo7">
+                                            <span>3-D Variable Average Vertical Profile</span>
+                                        </li>
+                                        <div id="ndemo7" class="collapse">
+                                            <li>This service generates the average of a three-dimensional variable over a specified region and time and display the average as a function of pressure level as an X-Y plot.</li>
+                                            <li>Scenario : 1</li>
+                                            <li>Version : 2</li>
+                                            <li>Root Service : 3</li>
+                                        </div>
+                                        <li class="plan-action">
+                                            <a href="http://einstein.sv.cmu.edu:9003/cmac/web/threeDimVarVertical.html" class="btn btn-primary" target="_blank">LinkTo</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>          
+                    </div><!--/.portfolio-item-->
+
+
+                </div>
+            </div>
+        </div>
+    </section><!--/#portfolio-item-->
+    
     <footer id="footer" class="midnight-blue">
         <div class="container">
             <div class="row">
@@ -339,12 +515,8 @@
             </div>
         </div>
     </div>
-    
 
     <script src="js/jquery.js"></script>
-    <script type="text/javascript">
-        $('.carousel').carousel()
-    </script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/jquery.prettyPhoto.js"></script>
     <script src="js/jquery.isotope.min.js"></script>
