--- a/app/views/services.scala.html
+++ b/app/views/services.scala.html
@@ -1,3 +1,6 @@
+@(climateServices: String)
+
+@main("test"){
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -582,3 +585,4 @@
     <script src='@routes.Assets.at("javascripts/wow.min.js")'></script>
 </body>
 </html>
+}
