--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -2,13 +2,31 @@
 
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
     <head>
-        <title>@title</title>
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
-        <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
-        <script src="@routes.Assets.at("javascripts/hello.js")" type="text/javascript"></script>
-    </head>
+        <meta charset="utf-8">
+	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	    <meta name="description" content="">
+	    <meta name="author" content="">
+	    <title>@title</title>
+	    
+	    <!-- core CSS -->
+	    <link href='@routes.Assets.at("stylesheets/bootstrap.min.css")' rel="stylesheet">
+	    <link href='@routes.Assets.at("stylesheets/font-awesome.min.css")' rel="stylesheet">
+	    <link href='@routes.Assets.at("stylesheets/animate.min.css")' rel="stylesheet">
+	    <link href='@routes.Assets.at("stylesheets/prettyPhoto.css")' rel="stylesheet">
+	    <link href='@routes.Assets.at("stylesheets/main.css")' rel="stylesheet">
+	    <link href='@routes.Assets.at("stylesheets/responsive.css")' rel="stylesheet">
+	    <!--[if lt IE 9]>
+	    <script src="js/html5shiv.js"></script>
+	    <script src="js/respond.min.js"></script>
+	    <![endif]-->
+	    <link rel="shortcut icon" href='@routes.Assets.at("images/ico/favicon.png")'>
+	    <link rel="apple-touch-icon-precomposed" sizes="144x144" href='@routes.Assets.at("images/ico/apple-touch-icon-144-precomposed.png")'>
+	    <link rel="apple-touch-icon-precomposed" sizes="114x114" href='@routes.Assets.at("images/ico/apple-touch-icon-114-precomposed.png")'>
+	    <link rel="apple-touch-icon-precomposed" sizes="72x72" href='@routes.Assets.at("images/ico/apple-touch-icon-72-precomposed.png")'>
+	    <link rel="apple-touch-icon-precomposed" href='@routes.Assets.at("images/ico/apple-touch-icon-57-precomposed.png")'>
+	</head>
     <body>
         @content
     </body>
